--- a/client/src/Pages/Messages/Messages.scss
+++ b/client/src/Pages/Messages/Messages.scss
@@ -1,16 +1,24 @@
 .messages {
-  margin-top: 8rem;
-  background: rgba(255, 255, 255, 0.267);
+  // margin-top: 8rem;
+  max-height: 100vh;
+  overflow-y: scroll;
   .profile-pic {
     width: 3rem;
     height: 3rem;
     border-radius: 20rem;
   }
+  .thread-section {
+    background: rgba(255, 255, 255, 0.267);
+    margin-top: 5rem;
+  }
   .thread {
     border: 1px solid white;
+    max-height: 70vh;
   }
   .background {
-    background: url('../../imgs/bicycle.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.404), rgba(0, 0, 0, 0.404)),
+      url('../../imgs/bicycle.jpg');
+
     width: 100vw;
     height: 100vh;
     background-position: center;
